--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <div class="logo"><a href="#"><img src="../../assets/logo.png" alt=""></a></div>
+    <div class="logo"><a href="#"><img src="../../assets/images/logo.png" alt=""></a></div>
     <div class="search-bar">
         <form action="">
             <input type="text" type="text" placeholder="Search...">
